--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.ddine.perimeterandarea">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/math_icon"
@@ -16,9 +21,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name= ".SignUPActivity">
+
+        </activity>
         <activity android:name=".TriangleCalculator" />
         <activity android:name=".SquareCalculator" />
-        <activity android:name=".CalculationHistory"></activity>
+        <activity android:name=".CalculationHistory" />
+        <activity android:name=".HomeActivity">
+
+        </activity>
     </application>
 
 </manifest>
