--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,21 +15,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
+
+        </activity>
+        <activity android:name=".SignUPActivity"></activity>
+        <activity android:name=".TriangleCalculator" />
+        <activity android:name=".SquareCalculator" />
+        <activity android:name=".CalculationHistory" />
+        <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name= ".SignUPActivity">
-
-        </activity>
-        <activity android:name=".TriangleCalculator" />
-        <activity android:name=".SquareCalculator" />
-        <activity android:name=".CalculationHistory" />
-        <activity android:name=".HomeActivity">
-
-        </activity>
+        <activity android:name=".SignINActivity"></activity>
     </application>
 
 </manifest>
